Mudei o tamanho o da fonte embaixo dos ícones do grid com <h5>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ header:
 feature_row:
 - image_path: /assets/images/chapeugrad.png
   alt: "Programas, cronogramas e materiais relativos às disciplinas que estou oferecendo no semestre corrente"
-  title: "<p>Disciplinas e<br>materiais de aula</p>"
+  title: "<h5>Disciplinas e<br>materiais de aula</h5>"
   url: "#test-link"
 - image_path: /assets/images/livroreto.png
   alt: "Trabalhos publicados e meu currículo Lattes"
