--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ feature_row:
   url: "#test-link"
 - image_path: /assets/images/livroreto.png
   alt: "Trabalhos publicados e meu currículo Lattes"
-  title: "Produção acadêmica"
+  title: "<h5>Produção acadêmica</h5>"
   # url: "#test-link"
 - image_path: /assets/images/rss-1.png
-  title: "musicologia.org"
+  title: "<h5>musicologia.org</h5>"
   alt: "Podcast, documentos de história da música brasileira e textos diversos"
   # url: "#test-link"
 
