Foda-se o splash, fiz o o leiaute da página inicial com o Home. Agora é fazer as outras páginas e, se der, limar a repetição do meu nome no topo e na coluna da esquerda.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Música, História e Ciências Sociais"
-layout: splash
+layout: home
 author_profile: true
 # permalink: /inicio/
 # date: 2019-07-23 T11:48:41-03:00
@@ -20,6 +20,5 @@ feature_row:
   title: "<h5>musicologia.org</h5>"
   alt: "Podcast, documentos de história da música brasileira e textos diversos"
   # url: "#test-link"
-
 ---
 {% include feature_row %}
