Subindo a versão final, ccom o leiaute Home

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@ header:
 feature_row:
 - image_path: /assets/images/chapeugrad.png
   alt: "Programas, cronogramas e materiais relativos às disciplinas que estou oferecendo no semestre corrente"
-  title: "<h5>Disciplinas e<br>materiais de aula</h5>"
+  title: "<h5>Disciplinas e materiais de aula</h5>"
   url: "#test-link"
 - image_path: /assets/images/livroreto.png
   alt: "Trabalhos publicados e meu currículo Lattes"
   title: "<h5>Produção acadêmica</h5>"
-  # url: "#test-link"
+  url: "#test-link"
 - image_path: /assets/images/rss-1.png
   title: "<h5>musicologia.org</h5>"
   alt: "Podcast, documentos de história da música brasileira e textos diversos"
-  # url: "#test-link"
+  url: "#test-link"
 ---
 {% include feature_row %}
