--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Música, História e Ciências Sociais"
-layout: home
+layout: splash
 author_profile: true
 # permalink: /inicio/
 # date: 2019-07-23 T11:48:41-03:00
