--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Música, História e Ciências Sociais"
+title: "MÚSICA, HISTÓRIA E CIÊNCIAS SOCIAIS"
 layout: splash
 author_profile: true
 # permalink: /inicio/
@@ -11,14 +11,15 @@ feature_row:
 - image_path: /assets/images/chapeugrad.png
   alt: "Programas, cronogramas e materiais relativos às disciplinas que estou oferecendo no semestre corrente"
   title: "<h5>Disciplinas e materiais de aula</h5>"
-  url: "#test-link"
+  url: aulas
 - image_path: /assets/images/livroreto.png
   alt: "Trabalhos publicados e meu currículo Lattes"
   title: "<h5>Produção acadêmica</h5>"
-  url: "#test-link"
+  url: producao
 - image_path: /assets/images/rss-1.png
   title: "<h5>musicologia.org</h5>"
   alt: "Podcast, documentos de história da música brasileira e textos diversos"
   url: "#test-link"
 ---
+<br><br>
 {% include feature_row %}
