Fazendo uns ajustes (tipo icone da licença no rodapé); falta completar as páginas das disciplinas, expandir os links da grade, preparar o site do podcast/hmb e fazer a gambiarra do formulario de contato. Por fim, falta resolver o problema do domínio.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@ feature_row:
   alt: "Programas, cronogramas e materiais relativos às disciplinas que estou oferecendo no semestre corrente"
   title: "<h5>Disciplinas e materiais de aula</h5>"
   url: aulas
+  description: "Programas, cronogramas e materiais relativos às disciplinas que estou oferecendo no semestre corrente"
 - image_path: /assets/images/livroreto.png
   alt: "Trabalhos publicados e meu currículo Lattes"
   title: "<h5>Produção acadêmica</h5>"
   url: producao
+  description: "Trabalhos publicados e meu currículo Lattes"
 - image_path: /assets/images/rss-1.png
   title: "<h5>musicologia.org</h5>"
   alt: "Podcast, documentos de história da música brasileira e textos diversos"
   url: "#test-link"
+  description: "Podcast, documentos de história da música brasileira e textos diversos"
+
 ---
 <br><br>
 {% include feature_row %}
