Ajustando o formulário de contato - está dando algum problema no formspree

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ feature_row:
 - image_path: /assets/images/rss-1.png
   title: "<h5>musicologia.org</h5>"
   alt: "Podcast, documentos de história da música brasileira e textos diversos"
-  url: "#test-link"
+  url: "musicologia"
   description: "Podcast, documentos de história da música brasileira e textos diversos"
 
 ---
