agora parece que o formspree funcionou

--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@ permalink: /contato/
 author_profile: false
 ---
 
-<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/formcont@fredericobarros.com" method="post">
+<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/contato@fredericobarros.com" method="post">
   <fieldset id="fs-frm-inputs">
     <label for="full-name"></label>
     <input type="text" name="name" id="full-name" placeholder="Nome completo" required="true">
