--- a/index.html
+++ b/index.html
@@ -28,5 +28,5 @@ feature_row:
 <br><br>
 {% include feature_row %}
 
-<h5>The only sure safeguard against the vagueness of theory is constant practice with the tools</h5>
-<h6>George Jack</h6>
+<quote>The only sure safeguard against the vagueness of theory is constant practice with the tools</quote>
+George Jack
