--- a/index.html
+++ b/index.html
@@ -28,5 +28,4 @@ feature_row:
 <br><br>
 {% include feature_row %}
 
-<quote>The only sure safeguard against the vagueness of theory is constant practice with the tools</quote>
-George Jack
+<blockquote cite="http://www.hotfreebooks.com/book/Wood-Carving-Design-and-Workmanship-George-Jack.html">The only sure safeguard against the vagueness of theory is constant practice with the tools</blockquote>
