--- a/index.html
+++ b/index.html
@@ -28,4 +28,4 @@ feature_row:
 <br><br>
 {% include feature_row %}
 
-<blockquote cite="http://www.hotfreebooks.com/book/Wood-Carving-Design-and-Workmanship-George-Jack.html">A única salvaguarda garantida contra a vagueza da teoria é a prática constante...</blockquote>
+<blockquote cite="http://www.hotfreebooks.com/book/Wood-Carving-Design-and-Workmanship-George-Jack.html">A única salvaguarda garantida contra a vagueza da teoria é a prática constante... (<a href="http://www.hotfreebooks.com/book/Wood-Carving-Design-and-Workmanship-George-Jack.html">George Jack</a>)</blockquote>
