--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ feature_row:
   url: producao
   description: "Trabalhos publicados e meu currículo Lattes"
 - image_path: /assets/images/rss-1.png
-  title: "<h5>musicologia.org</h5>"
+  title: "<h5>feed</h5>"
   alt: "Podcast, documentos de história da música brasileira e textos diversos"
   url: "musicologia"
   description: "Podcast, documentos de história da música brasileira e textos diversos"
