--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ feature_row:
 - image_path: /assets/images/rss-1.png
   title: "<h5>feed</h5>"
   alt: "Podcast, documentos de história da música brasileira e textos diversos"
-  url: "musicologia"
+  url: feed
   description: "Podcast, documentos de história da música brasileira e textos diversos"
 
 ---
